added website links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <div class="container">
       <div class="page-header">
         <h1>
-          <img src="/img/piFaceLogoFinal.png" class="logo"> on <img src="/img/githublogo.png" class="logo"><br>
+          <a href="http://www.piface.org.uk">
+            <img src="/img/piFaceLogoFinal.png" class="logo">
+          </a>
+          on
+          <img src="/img/githublogo.png" class="logo">
+          <br>
           <small>Source code for PiFace products.</small>
         </h1>
       </div>
@@ -74,7 +79,9 @@
     <!-- footer -->
     <div class="container">
       <div class="pull-right">
-        <p class="text-muted">&copy; 2013 OpenLX LTD</p>
+        <p class="text-muted">
+          <a href="http://www.piface.org.uk">piface.org.uk</a> |
+          &copy; 2013 OpenLX LTD</p>
       </div>
 
 <!--       <div class="pull-right">
