--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>PiFace on GitHub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -38,10 +38,17 @@
         </h1>
       </div>
 
+      <!-- Python -->
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Python</h2>
+        </div>
+      </div>
+
       <div class="row">
 
         <div class="col-md-4">
-          <h2>PiFace Common</h2>
+          <h3>PiFace Common</h3>
           <p>Common classes and functions for interacting with PiFace products.</p>
           <p><a href="http://piface.github.io/pifacecommon"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
           <ul class="list-group">
@@ -50,7 +57,7 @@
         </div>
 
         <div class="col-md-4">
-          <h2>PiFace Digital</h2>
+          <h3>PiFace Digital</h3>
           <p>Digital input/output for the Raspberry Pi.</p>
           <p><a href="http://piface.github.io/pifacedigitalio"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
           <ul class="list-group">
@@ -62,7 +69,7 @@
         </div>
 
         <div class="col-md-4">
-          <h2>PiFace Control and Display</h2>
+          <h3>PiFace Control and Display</h3>
           <p>Control and display information with the Raspberry Pi.</p>
           <p><a href="http://piface.github.io/pifacecad"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
           <ul class="list-group">
@@ -72,12 +79,52 @@
 
       </div> <!-- row -->
 
+      <hr>
+
+      <!-- C -->
+      <div class="row">
+        <div class="col-md-12">
+          <h2>C</h2>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-4">
+          <h3>MCP23S17</h3>
+          <p>Microchip MCP23S17 port expander.</p>
+          <p><a href="http://piface.github.io/libmcp23s17"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
+          <ul class="list-group">
+            <a href="http://github.com/piface/libmcp23s17" class="list-group-item">libmcp23s17</a>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+          <h3>PiFace Digital</h3>
+          <p>Digital input/output for the Raspberry Pi.</p>
+          <p><a href="http://piface.github.io/libpifacedigital"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
+          <ul class="list-group">
+            <a href="https://github.com/piface/libpifacedigital" class="list-group-item">libpifacedigital</a>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+          <h3>PiFace Control and Display</h3>
+          <p>Control and display information with the Raspberry Pi.</p>
+          <p><a href="http://piface.github.io/libpifacecad"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
+          <ul class="list-group">
+            <a href="https://github.com/piface/libpifacecad" class="list-group-item">libpifacecad</a>
+          </ul>
+        </div>
+
+      </div> <!-- row -->
+
     </div> <!-- container -->
 
-    <hr>
 
     <!-- footer -->
     <div class="container">
+      <hr>
       <div class="pull-right">
         <p class="text-muted">
           <a href="http://www.piface.org.uk">piface.org.uk</a> |
