--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="col-md-4">
           <h3>PiFace Common</h3>
           <p>Common classes and functions for interacting with PiFace products.</p>
-          <p><a href="http://piface.github.io/pifacecommon"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
+          <p><a href="http://pifacecommon.readthedocs.org/"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
           <ul class="list-group">
             <a href="http://github.com/piface/pifacecommon" class="list-group-item">PiFace Common</a>
           </ul>
@@ -59,7 +59,7 @@
         <div class="col-md-4">
           <h3>PiFace Digital</h3>
           <p>Digital input/output for the Raspberry Pi.</p>
-          <p><a href="http://piface.github.io/pifacedigitalio"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
+          <p><a href="http://pifacedigitalio.readthedocs.org/"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
           <ul class="list-group">
             <a href="https://github.com/piface/pifacedigitalio" class="list-group-item">PiFace Digital I/O</a>
             <a href="https://github.com/piface/pifacedigital-emulator" class="list-group-item">PiFace Digital Emulator</a>
@@ -71,7 +71,7 @@
         <div class="col-md-4">
           <h3>PiFace Control and Display</h3>
           <p>Control and display information with the Raspberry Pi.</p>
-          <p><a href="http://piface.github.io/pifacecad"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
+          <p><a href="http://pifacecad.readthedocs.org/"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
           <ul class="list-group">
             <a href="https://github.com/piface/pifacecad" class="list-group-item">PiFace Control and Display</a>
           </ul>
