--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="row">
 
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h3>PiFace Common</h3>
           <p>Common classes and functions for interacting with PiFace products.</p>
           <p><a href="http://pifacecommon.readthedocs.org/"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
@@ -56,7 +56,7 @@
           </ul>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h3>PiFace Digital</h3>
           <p>Digital input/output for the Raspberry Pi.</p>
           <p><a href="http://pifacedigitalio.readthedocs.org/"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
@@ -68,12 +68,25 @@
           </ul>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h3>PiFace Control and Display</h3>
           <p>Control and display information with the Raspberry Pi.</p>
           <p><a href="http://pifacecad.readthedocs.org/"><span class="glyphicon glyphicon-book"></span> Documentation</a></p>
           <ul class="list-group">
             <a href="https://github.com/piface/pifacecad" class="list-group-item">PiFace Control and Display</a>
+          </ul>
+        </div>
+        
+        <div class="col-md-3">
+          <h3>PiFace Relay Plus</h3>
+          <p>Control up to 64 relays with your Raspberry Pi!</p>
+          <p>
+            <a href="http://pifacerelayplus.readthedocs.org/">
+              <span class="glyphicon glyphicon-book"></span>Documentation
+            </a>
+          </p>
+          <ul class="list-group">
+            <a href="https://github.com/piface/pifacerelayplus" class="list-group-item">PiFace Relay Plus</a>
           </ul>
         </div>
 
