updated copyright date

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="pull-right">
         <p class="text-muted">
           <a href="http://www.piface.org.uk">piface.org.uk</a> |
-          &copy; 2013 OpenLX LTD</p>
+          &copy; 2013 - 2015 OpenLX LTD</p>
       </div>
 
 <!--       <div class="pull-right">
