added relay plus docs

--- a/index.html
+++ b/index.html
@@ -81,8 +81,17 @@
           <h3>PiFace Relay Plus</h3>
           <p>Control up to 64 relays with your Raspberry Pi!</p>
           <p>
-            <a href="http://pifacerelayplus.readthedocs.org/">
-              <span class="glyphicon glyphicon-book"></span> Documentation
+            <!-- <a href="http://pifacerelayplus.readthedocs.org/"> -->
+            <a href="http://www.piface.org.uk/assets/docs/PiFace-Relay-Plus_getting-started.pdf">
+              <span class="glyphicon glyphicon-book"></span> Documentation (Relay Plus)
+            </a>
+            <br>
+            <a href="http://www.piface.org.uk/assets/docs/PiFace-Relay-EXTRA_getting-started.pdf">
+              <span class="glyphicon glyphicon-book"></span> Documentation (Relay Extra)
+            </a>
+            <br>
+            <a href="http://www.piface.org.uk/assets/docs/PiFace-Motor-EXTRA_getting-started.pdf">
+              <span class="glyphicon glyphicon-book"></span> Documentation (Motor Extra)
             </a>
           </p>
           <ul class="list-group">
